# pylox

./: .bumper.toml  .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  LICENSE  README.md  grammar.md  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: lint_test.yml  pypi_release.yml
pylox/: __init__.py  ast_printer.py  builtins.py  callable.py  environment.py  error.py  expr.py  grammar.py  interpreter.py  lox.py  parser.py  preprocessor.py  protocols.py  resolver.py  scanner.py  token.py  tokens.py
pylox/builtins/: array_sum.lox  hello_world.lox  map.lox  py_builtins.py  split_on.lox
pylox/containers/: array.py  base.py
pylox/protocols/: interpreter.py  typing.py  visitor.py
tests/arrays/: test_array_methods.py  test_empty_pop.py  test_empty_popleft.py  test_nested_array_print.py  test_undefined_method.py
tests/assignment/: test_associativity.py  test_global.py  test_grouping.py  test_infix.py  test_local.py  test_prefix.py  test_syntax.py  test_to_this.py  test_undefined.py
tests/block/: test_empty.py  test_scope.py
tests/bool/: test_equality.py  test_not.py
tests/break/: test_conditional_break.py  test_for_break.py  test_global_break.py  test_nested_for_break.py  test_nested_mixed_break.py  test_nested_while_break.py  test_non_loop_break.py  test_while_break.py
tests/builtins/: test_array.py  test_len.py  test_loxarrayize.py  test_numeric.py  test_re.py  test_str2num.py
tests/call/: test_bool.py  test_nil.py  test_num.py  test_object.py  test_string.py
tests/class/: test_class_empty.py  test_class_inherit_self.py  test_class_inherited_method.py  test_class_local_inherit_other.py  test_class_local_inherit_self.py  test_class_local_reference_self.py  test_class_reference_self.py  test_empty.py  test_inherited_method.py  test_local_inherit_other.py  test_local_reference_self.py  test_reference_self.py
tests/class_constructor/: test_constructor_arguments.py  test_constructor_call_init_early_return.py  test_constructor_call_init_explicitly.py  test_constructor_default.py  test_constructor_default_arguments.py  test_constructor_early_return.py  test_constructor_extra_arguments.py  test_constructor_init_not_method.py  test_constructor_missing_arguments.py  test_constructor_return_in_nested_function.py  test_constructor_return_value.py
tests/closure/: test_assign_to_closure.py  test_assign_to_shadowed_later.py  test_close_over_function_parameter.py  test_close_over_later_variable.py  test_close_over_method_parameter.py  test_closed_closure_in_function.py  test_nested_closure.py  test_open_closure_in_function.py  test_reference_closure_multiple_times.py  test_reuse_closure_slot.py  test_shadow_closure_with_local.py  test_unused_closure.py  test_unused_later_closure.py
tests/comments/: test_block_comment.py  test_block_comment_at_eof.py  test_comment_at_eof.py  test_nested_block_comment.py  test_nested_comment.py  test_only_block_comment.py  test_only_line_comment.py  test_only_line_comment_and_line.py  test_unicode_comments.py  test_unterminated_block_comment.py
tests/continue/: test_for_continue.py  test_global_continue.py  test_nested_for_continue.py  test_nested_mixed_continue.py  test_nested_while_continue.py  test_non_loop_continue.py  test_while_continue.py
tests/expressions/: test_evaluate.py  test_parse.py
tests/field/: test_field_call_function_field.py  test_field_call_nonfunction_field.py  test_field_get_and_set_method.py  test_field_get_on_bool.py  test_field_get_on_class.py  test_field_get_on_function.py  test_field_get_on_nil.py  test_field_get_on_num.py  test_field_get_on_string.py  test_field_many.py  test_field_method.py  test_field_method_binds_this.py  test_field_on_instance.py  test_field_set_evaluation_order.py  test_field_set_on_bool.py  test_field_set_on_class.py  test_field_set_on_function.py  test_field_set_on_nil.py  test_field_set_on_num.py  test_field_set_on_string.py  test_field_undefined.py  test_get_on_bool.py  test_get_on_function.py  test_get_on_nil.py  test_get_on_string.py  test_many.py  test_on_instance.py  test_set_on_class.py  test_set_on_function.py  test_set_on_nil.py  test_set_on_string.py  test_undefined.py
tests/for/: test_for_class_in_body.py  test_for_closure_in_body.py  test_for_fun_in_body.py  test_for_return_closure.py  test_for_return_inside.py  test_for_scope.py  test_for_statement_condition.py  test_for_statement_increment.py  test_for_statement_initializer.py  test_for_syntax.py  test_for_var_in_body.py
tests/function/: test_body_must_be_block.py  test_empty_body.py  test_extra_arguments.py  test_local_mutual_recursion.py  test_local_recursion.py  test_missing_arguments.py  test_missing_comma_in_parameters.py  test_mutual_recursion.py  test_nested_call_with_arguments.py  test_parameters.py  test_print.py  test_recursion.py  test_too_many_arguments.py  test_too_many_parameters.py
tests/if/: test_class_in_else.py  test_class_in_then.py  test_dangling_else.py  test_else.py  test_fun_in_else.py  test_fun_in_then.py  test_if.py  test_truth.py  test_var_in_else.py  test_var_in_then.py
tests/include/: test_include.py
tests/inheritance/: test_constructor.py  test_inherit_from_function.py  test_inherit_from_nil.py  test_inherit_from_number.py  test_inherit_methods.py  test_parenthesized_superclass.py  test_set_fields_from_base_class.py
tests/interpreter/: test_interpreter.py  test_interpreter_helpers.py
tests/logical_operator/: test_and.py  test_and_truth.py  test_or.py  test_or_truth.py
tests/method/: test_arity.py  test_empty_block.py  test_extra_arguments.py  test_method_arity.py  test_method_empty_block.py  test_method_extra_arguments.py  test_method_missing_arguments.py  test_method_not_found.py  test_method_print_bound_method.py  test_method_refer_to_name.py  test_method_too_many_arguments.py  test_method_too_many_parameters.py  test_print_bound_method.py  test_refer_to_name.py  test_too_many_parameters.py
tests/misc/: test_precedence.py
tests/nil/: test_literal.py
tool/: generate_ast.py  generate_tests.py
(+139 files in other folders)
