[tool.poetry]
name = "sco1-pylox"
version = "0.5.1"
description = "A Python interpreter for the Lox programming language."
authors = ["sco1 <sco1.git@gmail.com>"]

readme = "README.md"
homepage = "https://github.com/sco1/"
repository = "https://github.com/sco1/pylox"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Interpreters",
    "Typing :: Typed",
]

packages = [{include = "pylox"}, {include = "tool"},]

[tool.poetry.scripts]
pylox = "pylox.lox:pylox_cli"
astgen = "tool.generate_ast:astgen_cli"
testgen = "tool.generate_tests:testgen_cli"

[tool.poetry.dependencies]
python = "^3.10"
attrs = ">21.2"
rich = "^13.0"
typer = "^0.7"

[tool.poetry.dev-dependencies]
black = "^24.1"
bump2version = "^1.0"
flake8 = "^7.0"
flake8-annotations = "^3.0"
flake8-bugbear = "^24.1"
flake8-docstrings = "^1.7"
flake8-fixme = "^1.1"
isort = "^5.12"
mypy = "^1.0"
pep8-naming = "^0.13"
pre-commit = "^3.0"
pytest = "^8.0"
pytest-check = "^2.1"
pytest-cov = "^4.0"
pytest-randomly = "^3.12"
time-machine = "^2.6"
tox = "^4.4"

[tool.black]
line-length = 100

[tool.isort]
case_sensitive = true
known_first_party = "pylox,tests"
no_lines_before = "LOCALFOLDER"
order_by_type = false
profile = "black"

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
