[project]
name = "sco1-pylox"
version = "0.5.1"
description = "A Python interpreter for the Lox programming language."
authors = [
    {name = "sco1", email = "sco1.git@gmail.com"}
]
maintainers = [
    {name = "sco1", email = "sco1.git@gmail.com"}
]

readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Interpreters",
    "Typing :: Typed",
]

requires-python = ">=3.10"
dependencies = [
    "attrs~=24.2",
    "rich~=13.9",
    "typer~=0.12",
]

[project.urls]
Homepage = "https://github.com/sco1/"
Documentation = "https://github.com/sco1/pylox/blob/main/README.md"
Repository = "https://github.com/sco1/pylox"
Issues = "https://github.com/sco1/pylox/issues"
Changelog = "https://github.com/sco1/pylox/blob/main/CHANGELOG.md"

[project.scripts]
pylox = "pylox.lox:pylox_cli"
astgen = "tool.generate_ast:astgen_cli"
testgen = "tool.generate_tests:testgen_cli"

[tool.uv]
dev-dependencies = [
    "black~=24.10",
    "bump2version~=1.0",
    "flake8~=7.1",
    "flake8-annotations~=3.1",
    "isort~=5.13",
    "mypy~=1.11",
    "pre-commit~=4.0",
    "pytest~=8.3",
    "pytest-cov~=5.0",
    "pytest-check~=2.4",
    "pytest-randomly~=3.15",
    "ruff~=0.6",
    "time-machine~=2.15",
    "tox~=4.18",
    "tox-uv~=1.11",
]

[tool.black]
line-length = 100

[tool.isort]
case_sensitive = true
known_first_party = "pylox,tests"
no_lines_before = "LOCALFOLDER"
order_by_type = false
profile = "black"

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.hatch.build.targets.wheel]
packages = ["pylox/"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
