[project]
name = "sco1-pylox"
version = "0.5.2"
description = "A Python interpreter for the Lox programming language."
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "sco1", email = "sco1.git@gmail.com"}
]

readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Interpreters",
    "Typing :: Typed",
]

requires-python = ">=3.12"
dependencies = [
    "rich~=14.0",
    "typer~=0.12",
]

[project.urls]
Homepage = "https://github.com/sco1/"
Documentation = "https://github.com/sco1/pylox/blob/main/README.md"
Repository = "https://github.com/sco1/pylox"
Issues = "https://github.com/sco1/pylox/issues"
Changelog = "https://github.com/sco1/pylox/blob/main/CHANGELOG.md"

[project.scripts]
pylox = "pylox.lox:pylox_cli"
astgen = "tool.generate_ast:astgen_cli"
testgen = "tool.generate_tests:testgen_cli"

[dependency-groups]
dev = [
    "black~=25.0",
    "flake8~=7.1",
    "flake8-annotations~=3.1",
    "flake8-define-class-attributes~=0.2",
    "isort~=7.0",
    "mypy~=1.14",
    "pre-commit~=4.0",
    "pytest~=8.3",
    "pytest-check~=2.4",
    "pytest-cov~=7.0",
    "pytest-randomly~=4.0",
    "ruff~=0.9",
    "sco1-bumper~=2.0",
    "time-machine~=2.15",
    "tox~=4.23",
    "tox-uv~=1.17",
]

[tool.black]
line-length = 100

[tool.isort]
case_sensitive = true
known_first_party = "pylox,tests"
no_lines_before = "LOCALFOLDER"
order_by_type = false
profile = "black"

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
enable_error_code = "exhaustive-match"
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.uv.build-backend]
module-name = "pylox"
module-root = ""

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
